# tool-result-taint-py

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/tool_result_taint/: __init__.py  taint.py
tests/: test_taint.py
